# homedir

./: .BOINC Manager  .Xdefaults  .bashrc  .bbtether.conf  .civclientrc  .cvsrc  .dput.cf  .face  .fonts.conf  .freeciv-client-rc-2.2  .gitconfig  .gitignore  .gitk  .minicpanrc  .nautilus-image-manipulator.ini  .pam_environment  .perlcriticrc  .podbrowserrc  .profile-avon  .profile-git  .profile-movile  .profile-perl  .proverc  .pydistutils.cfg  .vimrc  aix-install-rsync  ax-install-pkgs  cf-add-host
.blueproximity/: standard.conf
.byobu/: status  windows
.cpan/: FTPstats.yml  histfile
.cpan/CPAN/: MyConfig.pm
.cpanreporter/: config.ini  reports-sent.db
.dia/: menurc  persistence  pluginrc
.dzil/: config.ini
.eric4/: eric4session.e4s  eric4tasks.e4t  eric4templates.e4c
.icons/: CREDITS  index.theme
.icons/AquaFusion/: ChangeLog  index.theme
.icons/Lush/: README  index.theme
.icons/Lush/scalable/devices/: Makefile.am  Makefile.in
.icons/Lush/scalable/mimetypes/: Makefile.am  Makefile.in
.icons/Office-Yellow/: credits  index.theme
.icons/OpenWorld/: README.txt  index.theme
.icons/SmoothGNOME/: index.theme
.icons/Snow-Apple/: index.theme
.icons/SnowIsh-1.0/: CHANGELOG  icon-theme.cache  index.theme
.icons/YattaBlues/: index.theme
.icons/eXperience/: check_svgs  genindex.py  header  index.theme  xmms-applet.xpm
.icons/etiquette-icons-0.6/: AUTHORS  COPYING  README  index.theme
.module-starter/: config
.mplayer/: config
.perlbrew/: init
.stellarium/: config.ini  log.txt
.workrave/: historystats  id  idlelog.idx  state  todaystats
CV/: Makefile
Templates/: Analise SWOT.odt  New Database.odf.odb  New Formula.mml  New Microsoft Excel Spreadsheet.xls  New Microsoft PowerPoint 2007 Presentation.pptx  New Microsoft PowerPoint Presentation.ppt  New Microsoft Word 2007 Document.docx  New Microsoft Word Document.doc
etc/: 2011-ibm-signature.html  auto.gsa  auto.iso  auto.prod  backup.exceptions  backup.list  crontab  gitignore.global  nautilus-action-convert-to-pdf.xml  sample.iso  vimrc
sbin/: ax-mk-remote-me  fix-cedilla  fix-hosts  fix-notes-ini  fix-notes-zap  fix-notes85-bizcard  fix-resolvconf  fix-sametime-sound  lx-mk-remote-me  prepare-workstation  server-control.sh  smooth-ocdc  sun-mk-remote-me
(+128 files in other folders)
