icondir = $(datadir)/icons/Lush/scalable/devices
NULL = 
icon_DATA = \
	gnome-dev-cdrom-audio.svg \
	gnome-dev-cdrom.svg \
	gnome-dev-cdwriter.svg \
        gnome-dev-dvd.svg \
	gnome-dev-floppy.svg \
	gnome-dev-harddisk.svg \
	gnome-dev-joystick.svg \
	gnome-dev-mouse.svg \
	gnome-dev-printer.svg \
	gnome-dev-zipdisk.svg \
        gnome-dev-symlink.svg \
        gnome-dev-network.svg \
        $(NULL)
EXTRA_DIST = $(icon_DATA)
